# crossword-tools

./: .gitignore  .pre-commit-config.yaml  README.md  cw.py  install.sh  pyproject.toml  wordlist.txt
