[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cw"
version = "0.1.0"
description = "Tools for solving cryptic crosswords"
authors = [
    {name = "Danny Wood", email = "echostatements@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "MIT"}
dependencies = [
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["cw*"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I", "C90"]
ignore = []

line-length = 100
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Allow imports relative to the package directory.
src = ["cw"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
]

[tool.ruff.mccabe]
# Flag functions with a complexity higher than 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
